--- a/databases/models_list_displaying/templates/books/books_list.html
+++ b/databases/models_list_displaying/templates/books/books_list.html
@@ -8,16 +8,28 @@
             <h1><a href="/books">Каталог</a></h1>
         </div>
         <div class="row">
+            {% for x in books %}
             <div class="book col-md-4">
-                <h2>Сияние</h2>
-                <p>Автор: Стивен Кинг</p>
-                <p>Дата публикации: 2018-09-10</p>
+                <h2>{{ x.name }}</h2>
+                <p>Автор: {{ x.author }} </p>
+                <p>Дата публикации: {{ x.pub_date }}</p>
+            <a href="/books/{{ x.datestring }}">Открыть</a>
             </div>
+            {% endfor %}
+
+        </div>
+         <div class="row">
+
             <div class="book col-md-4">
-                <h2>1984</h2>
-                <p>Автор: Джордж Оруэл</p>
-                <p>Дата публикации: 2015-03-11</p>
+                {% if page_back %}
+                 <a href="/books/{{ page_back.datestring }}">{{ page_back.datestring }}</a>
+                {% endif %}
+                {% if page_forward %}
+                 <a href="/books/{{ page_forward.datestring }}">{{ page_forward.datestring }}</a>
+                {% endif %}
             </div>
+
+
         </div>
     </div>
 {% endblock %}
